src/integration.h

typedef struct libia_sst libia_sst;
typedef struct libia_image libia_image;
typedef enum libia_sst_generation_kind {
    LIBIA_SST_GENERATION_KIND_TEXT = 0,
    LIBIA_SST_GENERATION_KIND_SPEECH_START = 1,
    LIBIA_SST_GENERATION_KIND_SPEECH_END = 2,
} libia_sst_generation_kind;
typedef void (*libia_sst_stream_callback)(libia_sst_generation_kind kind, const char *text, void *user_data);
LIBIA_API libia_sst *libia_sst_create(const char *model_path);
LIBIA_API void       libia_sst_free(libia_sst *sst);
LIBIA_API bool       libia_sst_load(libia_sst *sst, char **error_out);
LIBIA_API void       libia_sst_reset(libia_sst *sst);
LIBIA_API void       libia_sst_clear_audio(libia_sst *sst);
LIBIA_API bool libia_sst_set_model_path(libia_sst *sst, const char *path, char **error_out);
LIBIA_API bool libia_sst_set_vad_model_path(libia_sst *sst, const char *path, char **error_out);
LIBIA_API bool libia_sst_set_language(libia_sst *sst, const char *value, char **error_out);
LIBIA_API bool libia_sst_set_initial_prompt(libia_sst *sst, const char *value, char **error_out);
LIBIA_API bool libia_sst_set_use_gpu(libia_sst *sst, bool value, char **error_out);
LIBIA_API bool libia_sst_set_flash_attn(libia_sst *sst, bool value, char **error_out);
LIBIA_API bool libia_sst_set_translate(libia_sst *sst, bool value, char **error_out);
LIBIA_API bool libia_sst_set_no_context(libia_sst *sst, bool value, char **error_out);
LIBIA_API bool libia_sst_set_no_timestamps(libia_sst *sst, bool value, char **error_out);
LIBIA_API bool libia_sst_set_print_special(libia_sst *sst, bool value, char **error_out);
LIBIA_API bool libia_sst_set_suppress_nst(libia_sst *sst, bool value, char **error_out);
LIBIA_API bool libia_sst_set_n_threads(libia_sst *sst, int64_t value, char **error_out);
LIBIA_API bool libia_sst_set_n_processors(libia_sst *sst, int64_t value, char **error_out);
LIBIA_API bool libia_sst_set_step_ms(libia_sst *sst, int64_t value, char **error_out);
LIBIA_API bool libia_sst_set_length_ms(libia_sst *sst, int64_t value, char **error_out);
LIBIA_API bool libia_sst_set_keep_ms(libia_sst *sst, int64_t value, char **error_out);
LIBIA_API bool libia_sst_set_vad_enabled(libia_sst *sst, bool value, char **error_out);
LIBIA_API bool libia_sst_set_vad_threshold(libia_sst *sst, double value, char **error_out);
LIBIA_API bool libia_sst_set_vad_min_speech_duration_ms(libia_sst *sst, int64_t value, char **error_out);
LIBIA_API bool libia_sst_set_vad_min_silence_duration_ms(libia_sst *sst, int64_t value, char **error_out);
LIBIA_API bool libia_sst_set_vad_max_speech_duration_s(libia_sst *sst, double value, char **error_out);
LIBIA_API bool libia_sst_set_vad_speech_pad_ms(libia_sst *sst, int64_t value, char **error_out);
LIBIA_API bool libia_sst_set_vad_samples_overlap(libia_sst *sst, double value, char **error_out);
LIBIA_API char *libia_sst_push_audio(libia_sst *sst, const float *samples, size_t n_samples, int64_t sample_rate, int64_t channels, bool finalize, libia_sst_stream_callback on_text, void *user_data, char **error_out);
LIBIA_API char *libia_sst_flush(libia_sst *sst, libia_sst_stream_callback on_text, void *user_data, char **error_out);
LIBIA_API const char *libia_sst_last_error(const libia_sst *sst);
typedef enum libia_image_sample_method {
    LIBIA_IMAGE_SAMPLE_EULER = 0,
    LIBIA_IMAGE_SAMPLE_EULER_A = 1,
    LIBIA_IMAGE_SAMPLE_HEUN = 2,
    LIBIA_IMAGE_SAMPLE_DPM2 = 3,
    LIBIA_IMAGE_SAMPLE_DPMPP2S_A = 4,
    LIBIA_IMAGE_SAMPLE_DPMPP2M = 5,
    LIBIA_IMAGE_SAMPLE_LCM = 9,
} libia_image_sample_method;
typedef enum libia_image_scheduler {
    LIBIA_IMAGE_SCHEDULER_DISCRETE = 0,
    LIBIA_IMAGE_SCHEDULER_KARRAS = 1,
    LIBIA_IMAGE_SCHEDULER_EXPONENTIAL = 2,
    LIBIA_IMAGE_SCHEDULER_SIMPLE = 6,
} libia_image_scheduler;
typedef struct libia_image_params {
    const char *model_path;
    const char *diffusion_model_path;
    const char *vae_path;
    const char *clip_l_path;
    const char *clip_g_path;
    const char *t5xxl_path;
    const char *llm_path;
    const char *backend;
    const char *params_backend;
    const char *max_vram;
    int32_t n_threads;
    bool use_mmap;
    bool flash_attn;
    bool diffusion_flash_attn;
} libia_image_params;
typedef struct libia_image_generate_params {
    const char *prompt;
    const char *negative_prompt;
    const char *output_path;
    int32_t width;
    int32_t height;
    int32_t sample_steps;
    int64_t seed;
    int32_t batch_count;
    float cfg_scale;
    float guidance;
    libia_image_sample_method sample_method;
    libia_image_scheduler scheduler;
} libia_image_generate_params;
typedef struct libia_image_result {
    char *path;
    int32_t width;
    int32_t height;
    int32_t channels;
    int64_t seed;
} libia_image_result;
LIBIA_API void libia_image_params_init(libia_image_params *params);
LIBIA_API void libia_image_generate_params_init(libia_image_generate_params *params);
LIBIA_API void libia_image_result_free(libia_image_result *result);
LIBIA_API libia_image *libia_image_create(const libia_image_params *params);
LIBIA_API void         libia_image_free(libia_image *image);
LIBIA_API bool         libia_image_load(libia_image *image, char **error_out);
LIBIA_API void         libia_image_unload(libia_image *image);
LIBIA_API bool         libia_image_is_loaded(const libia_image *image);
LIBIA_API bool         libia_image_generate(libia_image *image, const libia_image_generate_params *params, libia_image_result *out_result, char **error_out);
LIBIA_API const char  *libia_image_last_error(const libia_image *image);