client-rust/lib-rust/src/ffi.rs


    pub fn libia_sst_create(model_path: *const c_char) -> *mut libia_sst;
    pub fn libia_sst_free(sst: *mut libia_sst);
    pub fn libia_sst_load(sst: *mut libia_sst, error_out: *mut *mut c_char) -> bool;
    pub fn libia_sst_reset(sst: *mut libia_sst);
    pub fn libia_sst_clear_audio(sst: *mut libia_sst);
    pub fn libia_sst_set_model_path(
        sst: *mut libia_sst,
        path: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_vad_model_path(
        sst: *mut libia_sst,
        path: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_language(
        sst: *mut libia_sst,
        value: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_initial_prompt(
        sst: *mut libia_sst,
        value: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_use_gpu(
        sst: *mut libia_sst,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_flash_attn(
        sst: *mut libia_sst,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_translate(
        sst: *mut libia_sst,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_no_context(
        sst: *mut libia_sst,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_no_timestamps(
        sst: *mut libia_sst,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_print_special(
        sst: *mut libia_sst,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_suppress_nst(
        sst: *mut libia_sst,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_n_threads(
        sst: *mut libia_sst,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_n_processors(
        sst: *mut libia_sst,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_step_ms(
        sst: *mut libia_sst,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_length_ms(
        sst: *mut libia_sst,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_keep_ms(
        sst: *mut libia_sst,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_vad_enabled(
        sst: *mut libia_sst,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_vad_threshold(
        sst: *mut libia_sst,
        value: c_double,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_vad_min_speech_duration_ms(
        sst: *mut libia_sst,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_vad_min_silence_duration_ms(
        sst: *mut libia_sst,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_vad_max_speech_duration_s(
        sst: *mut libia_sst,
        value: c_double,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_vad_speech_pad_ms(
        sst: *mut libia_sst,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_set_vad_samples_overlap(
        sst: *mut libia_sst,
        value: c_double,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_sst_push_audio(
        sst: *mut libia_sst,
        samples: *const f32,
        n_samples: usize,
        sample_rate: c_longlong,
        channels: c_longlong,
        finalize: bool,
        on_text: libia_sst_stream_callback,
        user_data: *mut c_void,
        error_out: *mut *mut c_char,
    ) -> *mut c_char;
    pub fn libia_sst_flush(
        sst: *mut libia_sst,
        on_text: libia_sst_stream_callback,
        user_data: *mut c_void,
        error_out: *mut *mut c_char,
    ) -> *mut c_char;
    pub fn libia_sst_last_error(sst: *const libia_sst) -> *const c_char;

    pub fn libia_image_params_init(params: *mut libia_image_params);
    pub fn libia_image_generate_params_init(params: *mut libia_image_generate_params);
    pub fn libia_image_result_free(result: *mut libia_image_result);
    pub fn libia_image_create(params: *const libia_image_params) -> *mut libia_image;
    pub fn libia_image_free(image: *mut libia_image);
    pub fn libia_image_load(image: *mut libia_image, error_out: *mut *mut c_char) -> bool;
    pub fn libia_image_unload(image: *mut libia_image);
    pub fn libia_image_is_loaded(image: *const libia_image) -> bool;
    pub fn libia_image_generate(
        image: *mut libia_image,
        params: *const libia_image_generate_params,
        out_result: *mut libia_image_result,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_image_last_error(image: *const libia_image) -> *const c_char;
}
